[package]
name = "breeze_cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
bytes = "1.3.0"
futures = "0.3.25"
hyper = { version = "0.14.23", features = ["server", "stream"] }
memory-cache-rs = "0.2.0"
tokio = { version = "1", features = ["full"] }
